CSS fix for LayoutContentItems component - ScrollX moved to outside div. This avoid unexpected jumps in the width of the inner div. See https://stackoverflow.com/a/49717276.

--- a/src/components/layouts/layout-content-items/style.less
+++ b/src/components/layouts/layout-content-items/style.less
@@ -1,7 +1,17 @@
 .LayoutContentItems {
-    //height: calc(100% - 45px);
-    //overflow-y: auto;
-    //padding: 0 10px;
-    display: flex;
-    flex-flow: nowrap column;
+  //height: calc(100% - 45px);
+  //overflow-y: auto;
+  //padding: 0 10px;
+  display: flex;
+  flex-flow: nowrap column;
+
+  /*Move scrollX to box outside*/
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+}
+
+.LayoutContentItems__items {
+  /*Move scrollX to box outside*/
+  width: inherit;
 }
