--- a/src/components/layouts/layout-page/style.less
+++ b/src/components/layouts/layout-page/style.less
@@ -6,7 +6,6 @@
   max-width: 70vw;
   margin: auto;
 
-  padding: 1em;
   border-radius: 1em;
 
   background-color: #fff;
