--- a/src/containers/post-list-page/style.less
+++ b/src/containers/post-list-page/style.less
@@ -1,4 +1,5 @@
 .PostListPage {
+  padding: 1.5em;
 }
 
 .PostListPage__header {
@@ -14,7 +15,6 @@
 }
 
 .PostListPage__contentItems {
-  overflow-y: auto;
   margin: 1em 0;
   padding: 0 1em 0 0;
 }
